integration update for doctor search

--- a/BeatsProject/WebApplication5/Web.config
+++ b/BeatsProject/WebApplication5/Web.config
@@ -37,7 +37,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <connectionStrings><add name="hackathonDb1Entities1" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.41;initial catalog=beats;user id=temp;password=12345;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings><add name="hackathonDb1Entities1" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.41;initial catalog=hackathondb1;user id=temp;password=12345;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
